...
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="permission_rationale_location">"Location permissions are needed for providing GPS triangulations."
    </string>
    <string name="yes">Yes</string>
    <string name="unit_active_question">Do you want to Activate Unit?</string>
    <string name="unit_inactive_question">Do you want to Inactivate Unit?</string>
    <string name="no">No</string>
    <string name="title_activity_maps">Map</string>
    <string name="new_account">No account yet? Create one</string>
    <string name="cerca_trova">Cerca Trova</string>
    <string name="shared_preference_file">debapriya.thunderstruck.com.cercatrovapersonnel.data</string>
    <string name="broadcast_intent_filter">debapriya.thunderstruck.com.cercatrovapersonnel.emergency_broadcast</string>
    <string name="unit_status_inactive">Unit: Inactive</string>
    <string name="unit_status_active">Unit: Active</string>
    <string name="sos">SOS</string>
    <string name="start_navigation">start navigation</string>
    <string name="address">Address:</string>
    <string name="adhaar_number">Adhaar Number:</string>
    <string name="age">Age:</string>
    <string name="blood_group">Blood Group:</string>
...
